fullSandbox11072023/force-app/main/default/objects/Sample_Request__c/Sample_Request__c.object-meta.xml
<CustomObject>
    <label>Sample Request</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Sample Request</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sample Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>