fullSandbox11072023/force-app/main/default/objects/Sample_Request__c/fields/Confirmation_Number__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Number__c</fullName>
    <inlineHelpText>This is added by customer service once the request is confirmed.</inlineHelpText>
    <label>Confirmation Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>