fullSandbox11072023/force-app/main/default/objects/Sample_Request__c/fields/Default_Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Default_Unit_of_Measure__c</fullName>
    <inlineHelpText>Each = 1
Default = Product Default of Each, Case, etc.</inlineHelpText>
    <label>Default Unit of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Each</fullName>
            </value>
            <value>
                <fullName>Default</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>