fullSandbox11072023/force-app/main/default/objects/Sample_Request__c/fields/Destination__c.field-meta.xml
<CustomField>
    <fullName>Destination__c</fullName>
    <inlineHelpText>Address to ship the samples. Default will pull territory (Home) address.</inlineHelpText>
    <label>Destination</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Territory Default</fullName>
            </value>
            <value>
                <fullName>Custom Address</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>