fullSandbox11072023/force-app/main/default/objects/Sample_Request__c/fields/Distributor__c.field-meta.xml
<CustomField>
    <fullName>Distributor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distributor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Sales_Region__c</field>
            <operation>equals</operation>
            <value>Central America - North Cone, Southern Cone, Mexico, Brazil, US Exports, Caribbean, Venezuela, Marketing</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sample Requests (Distributor)</relationshipLabel>
    <relationshipName>Sample_Requests_Distributor</relationshipName>
    <type>Lookup</type>
</CustomField>