fullSandbox11072023/force-app/main/default/objects/Sample_Request__c/fields/Facility_Address__c.field-meta.xml
<CustomField>
    <fullName>Facility_Address__c</fullName>
    <label>Facility Address</label>
    <type>TextArea</type>
</CustomField>