fullSandbox11072023/force-app/main/default/objects/Sample_Request__c/fields/Line_Count__c.field-meta.xml
<CustomField>
    <fullName>Line_Count__c</fullName>
    <label>Line Count</label>
    <summaryForeignKey>Sample_Request_Line_Item__c.Sample_Request__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>