fullSandbox11072023/force-app/main/default/objects/Sample_Request__c/fields/MantaDemoRollUpSummary__c.field-meta.xml
<CustomField>
    <fullName>MantaDemoRollUpSummary__c</fullName>
    <label>Manta Demo Roll Up Summary</label>
    <summarizedField>Sample_Request_Line_Item__c.MantaDemoCount__c</summarizedField>
    <summaryForeignKey>Sample_Request_Line_Item__c.Sample_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>