fullSandbox11072023/force-app/main/default/objects/Sample_Request__c/fields/Medical_License__c.field-meta.xml
<CustomField>
    <fullName>Medical_License__c</fullName>
    <label>Medical License #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>