fullSandbox11072023/force-app/main/default/objects/Sample_Request__c/fields/Number_of_Clinicians_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Clinicians_Rollup__c</fullName>
    <description>Calculates number of clinicians from line items.</description>
    <inlineHelpText>Calculates number of clinicians from line items.</inlineHelpText>
    <label>Number of Clinicians Rollup</label>
    <summarizedField>Sample_Request_Line_Item__c.Number_of_Clinicians__c</summarizedField>
    <summaryForeignKey>Sample_Request_Line_Item__c.Sample_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>