fullSandbox11072023/force-app/main/default/objects/Sample_Request__c/fields/Order_Reason__c.field-meta.xml
<CustomField>
    <fullName>Order_Reason__c</fullName>
    <description>LatinAmerica Uses this field</description>
    <label>Order Reason</label>
    <type>TextArea</type>
</CustomField>