fullSandbox11072023/force-app/main/default/objects/Sample_Request__c/fields/Owner_Region__c.field-meta.xml
<CustomField>
    <fullName>Owner_Region__c</fullName>
    <formula>TEXT(Owner:User.Region__c)</formula>
    <label>Owner Region</label>
    <type>Text</type>
</CustomField>