fullSandbox11072023/force-app/main/default/objects/Sample_Request__c/fields/PO__c.field-meta.xml
<CustomField>
    <fullName>PO__c</fullName>
    <label>PO #</label>
    <length>25</length>
    <type>Text</type>
</CustomField>