fullSandbox11072023/force-app/main/default/objects/Sample_Request__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <formula>if(ISPICKVAL(Shipping_Method__c, &quot;Overnight&quot;),&quot;Overnight&quot;,&quot;Standard&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Priority</label>
    <type>Text</type>
</CustomField>