fullSandbox11072023/force-app/main/default/objects/Sample_Request__c/fields/Qty_Sales_Unit_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Qty_Sales_Unit_Rollup__c</fullName>
    <description>Show total quantity for associated line items.</description>
    <inlineHelpText>Show total quantity for associated line items.</inlineHelpText>
    <label>Qty/Sales Unit Rollup</label>
    <summarizedField>Sample_Request_Line_Item__c.Actual_Evaulation_Number__c</summarizedField>
    <summaryForeignKey>Sample_Request_Line_Item__c.Sample_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>