fullSandbox11072023/force-app/main/default/objects/Sample_Request__c/fields/Record_Name__c.field-meta.xml
<CustomField>
    <fullName>Record_Name__c</fullName>
    <formula>Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Name</label>
    <type>Text</type>
</CustomField>