fullSandbox11072023/force-app/main/default/objects/Sample_Request__c/fields/Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order__c</fullName>
    <description>Fields holds Sales Order # from SAP after Customer Service creates the Sample Order.  Rep is supposed to fill this field in.</description>
    <label>Sales Order #</label>
    <length>18</length>
    <type>Text</type>
</CustomField>