fullSandbox11072023/force-app/main/default/objects/Sample_Request__c/fields/Samples_Per_Clinician_Max__c.field-meta.xml
<CustomField>
    <fullName>Samples_Per_Clinician_Max__c</fullName>
    <description>Shows the maximum number for Samples Per Clinician</description>
    <label>Samples Per Clinician</label>
    <summarizedField>Sample_Request_Line_Item__c.Samples_Per_Clinician__c</summarizedField>
    <summaryForeignKey>Sample_Request_Line_Item__c.Sample_Request__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>