fullSandbox11072023/force-app/main/default/objects/Sample_Request__c/fields/Shipping_Address_1__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address_1__c</fullName>
    <label>Shipping Address 1</label>
    <length>50</length>
    <type>Text</type>
</CustomField>