fullSandbox11072023/force-app/main/default/objects/Sample_Request__c/fields/Shipping_City__c.field-meta.xml
<CustomField>
    <fullName>Shipping_City__c</fullName>
    <label>Shipping City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>