fullSandbox11072023/force-app/main/default/objects/Sample_Request__c/fields/Shipping_Country__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Country__c</fullName>
    <label>Shipping Country</label>
    <length>2</length>
    <type>Text</type>
</CustomField>