fullSandbox11072023/force-app/main/default/objects/Sample_Request__c/fields/Shipping_Method__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Method__c</fullName>
    <label>Shipping Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>3-Day</fullName>
            </value>
            <value>
                <fullName>2-Day</fullName>
            </value>
            <value>
                <fullName>Overnight</fullName>
            </value>
            <value>
                <fullName>Consolidate with next shipment</fullName>
            </value>
            <value>
                <fullName>Customer carrier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>