fullSandbox11072023/force-app/main/default/objects/Sample_Request__c/fields/Shipping_Zipcode__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Zipcode__c</fullName>
    <label>Shipping Zipcode</label>
    <length>25</length>
    <type>Text</type>
</CustomField>