fullSandbox11072023/force-app/main/default/objects/Sample_Request__c/fields/Storage_Location__c.field-meta.xml
<CustomField>
    <fullName>Storage_Location__c</fullName>
    <description>Field is used to help Customer Service/Distribution Center to understand what bin the products should be chosen from.</description>
    <formula>IF(
MantaDemoRollUpSummary__c &gt;= 1,
&quot;3000&quot;,

IF(
TEXT(Type__c) = &quot;Disposable/Single Use Demo Product (i.e., Not for Human Use)&quot;, 
&quot;4000&quot;,
IF(
TEXT(Type__c) = &quot;Disposable/Single Use Product Evaluation - Eaches&quot;, 
&quot;4500&quot;,
&quot;3000&quot;
)
)
)</formula>
    <inlineHelpText>Field is used to help Customer Service/Distribution Center to understand what bin the products should be chosen from.</inlineHelpText>
    <label>Storage Location</label>
    <type>Text</type>
</CustomField>