fullSandbox11072023/force-app/main/default/objects/Sample_Request__c/fields/TerritoryManager__c.field-meta.xml
<CustomField>
    <fullName>TerritoryManager__c</fullName>
    <label>Territory Manager</label>
    <length>18</length>
    <type>Text</type>
</CustomField>