fullSandbox11072023/force-app/main/default/objects/Sample_Request__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <inlineHelpText>All products are eligible under &quot;Field Sales Stock&quot; type when creating sample records but certain products are only available for certain sample request types.  Check the product record of the product that is trying to be added to see if it is eligible for samples.  Under section &quot;System Information&quot; on a product record, you will see the fields Single Use Demo, Multi-Use Demo, Eaches, and Applier.  These fields have a &quot;i&quot; that you can hover over to get more information about what the field means.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Disposable/Single Use Demo Product (i.e., Not for Human Use)</fullName>
            </value>
            <value>
                <fullName>Multi-Use Product Demo (i.e., Surgical Instrumentation)</fullName>
            </value>
            <value>
                <fullName>Disposable/Single Use Product Evaluation</fullName>
            </value>
            <value>
                <fullName>Disposable/Single Use Product Evaluation - Eaches</fullName>
            </value>
            <value>
                <fullName>Field Sales Stock (i.e., future saleable unit)</fullName>
            </value>
            <value>
                <fullName>Loaner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>