fullSandbox11072023/force-app/main/default/objects/Sample_Request__c/recordTypes/Latam_Sample_Request.recordType-meta.xml
<RecordType>
    <fullName>Latam_Sample_Request</fullName>
    <active>true</active>
    <label>Latam Sample Request</label>
</RecordType>