fullSandbox11072023/force-app/main/default/objects/Sample_Request__c/recordTypes/Sample_Request.recordType-meta.xml
<RecordType>
    <fullName>Sample_Request</fullName>
    <active>true</active>
    <label>Sample Request</label>
</RecordType>