fullSandbox11072023/force-app/main/default/objects/Sample_Request__c/validationRules/Cannot_change_type_with_line_items.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_change_type_with_line_items</fullName>
    <active>true</active>
    <description>Not allow a user to update a Sample Request with line items to prevent the user from adding any &quot;Demo Only&quot; products to an evaluation Sample Request.</description>
    <errorConditionFormula>AND(
ISCHANGED( Type__c ), Qty_Sales_Unit_Rollup__c &gt; 0
)</errorConditionFormula>
    <errorDisplayField>Type__c</errorDisplayField>
    <errorMessage>Sample Request type cannot be changed once line items are added.</errorMessage>
</ValidationRule>