fullSandbox11072023/force-app/main/default/objects/Sample_Request__c/validationRules/Cannot_Edit_Approved_Sample_Records.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Edit_Approved_Sample_Records</fullName>
    <active>true</active>
    <description>Validation rule to lock a record after approved.  The record is unlocked via Approval to allow transfer of stock between users at the line item level.</description>
    <errorConditionFormula>AND(
TEXT(Status__c) = &apos;Ready&apos;,
NOT( ISCHANGED( Qty_Sales_Unit_Rollup__c ) ),
NOT( ISCHANGED(  Samples_Per_Clinician_Max__c  ) )
)</errorConditionFormula>
    <errorMessage>An approved record cannot be edited.</errorMessage>
</ValidationRule>