fullSandbox11072023/force-app/main/default/objects/Sample_Request__c/validationRules/Shipping_Information_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Shipping_Information_is_Required</fullName>
    <active>true</active>
    <description>Shipping information is required on all sample request.</description>
    <errorConditionFormula>IF(
OR( ISBLANK( Shipping_Address_1__c ), 
ISBLANK( Shipping_City__c ),
ISBLANK( Shipping_State__c ),
ISBLANK( Shipping_Zipcode__c ),
ISBLANK( Shipping_Country__c )
),
true,
false
)</errorConditionFormula>
    <errorMessage>All Shipping Information Must Be Completed.</errorMessage>
</ValidationRule>