fullSandbox11072023/force-app/main/default/objects/Sample_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Approval_Required__c</columns>
    <columns>Line_Count__c</columns>
    <columns>Owner_Full_Name__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Attention_Line__c</field>
        <operation>contains</operation>
        <value>Carol Burroughs</value>
    </filters>
    <label>All</label>
    <language>en_US</language>
</ListView>