fullSandbox11072023/force-app/main/default/objects/Sample_Request__c/listViews/CS_Waiting_for_Approval.listView-meta.xml
<ListView>
    <fullName>CS_Waiting_for_Approval</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>Shipping_Method__c</columns>
    <columns>Approval_Required__c</columns>
    <columns>Owner_Full_Name__c</columns>
    <columns>Owner_Business_Unit__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Waiting for Approval</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Sample_Request__c.Sample_Request</value>
    </filters>
    <label>CS - Waiting for Approval</label>
    <language>en_US</language>
    <sharedTo>
        <group>Admins</group>
        <role>Customer_Service_Manager</role>
        <role>Customer_Service_Rep</role>
    </sharedTo>
</ListView>