fullSandbox11072023/force-app/main/default/objects/Sample_Request__c/listViews/Customer_Service_Samples_Sample_Request.listView-meta.xml
<ListView>
    <fullName>Customer_Service_Samples_Sample_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>Customer Service Samples</label>
    <language>en_US</language>
    <queue>Customer_Service_Samples</queue>
    <sharedTo>
        <group>SFDC_Team</group>
    </sharedTo>
</ListView>