fullSandbox11072023/force-app/main/default/objects/Sample_Request__c/listViews/My_Sample_Request2.listView-meta.xml
<ListView>
    <fullName>My_Sample_Request2</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Approval_Required__c</columns>
    <columns>Record_Name__c</columns>
    <columns>Territory_Number__c</columns>
    <columns>Type__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Sample Request</label>
</ListView>